2015-04-24 Pierre Wieser <pwieser@trychlos.org>

	* src/api/ofo-bat.h,
	* src/core/ofo-bat.c:
	- ofo_bat_get_account(), ofo_bat_set_account(): new methods.

	* src/ui/ofa-bat-properties-bin.c,
	* src/ui/ofa-bat-properties-bin.ui: display account number.

	* src/ui/ofa-closing-parms-bin.c:
	- slightly increase the width of the account number field.

	* src/ui/ofa-dossier-properties.c,
	* src/ui/ofa-dossier-properties.ui:
	- display last closed period and last entry of previous exercice.

2015-04-23 Pierre Wieser <pwieser@trychlos.org>

	* src/api/ofo-dossier.h,
	* src/core/ofo-dossier.c:
	- ofo_dossier_get_last_closing_date(), ofo_dossier_get_prev_exe_last_entry(),
	  ofo_dossier_set_last_closing_date(), ofo_dossier_set_prev_exe_last_entry():
	  new methods.

2015-04-20 Pierre Wieser <pwieser@trychlos.org>

	* src/core/ofo-dossier-ddl.c: upgrade the DBMS to v26.

	* src/ui/ofa-application.c:
	- close the current dossier before restoring (todo #807). 

	* src/ui/ofa-main-window.c:
	- make sure there is a dossier before closing it.

2015-04-18 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-buttons-box.c,
	* src/ui/ofa-buttons-box.h: define 'Settlement' and 'Reconciliation' buttons.

	* src/ui/ofa-accounts-chart.c,
	* src/ui/ofa-accounts-frame.c,
	* src/ui/ofa-accounts-frame.h:
	- open settlement (resp. reconciliation) page on button click (todo #813).

	* src/ui/ofa-reconciliation.c,
	* src/ui/ofa-reconciliation.h: new ofa_reconciliation_set_account() method.

	* src/ui/ofa-settlement.c,
	* src/ui/ofa-settlement.h: new ofa_settlement_set_account() method.

	* src/ui/ofa-account-select.c,
	* src/ui/ofa-accounts-page.c: updated accordingly.

	* src/ui/ofa-ledger-close.c,
	* src/ui/ofa-ledger-close.h: have a 'All ledgers' button (todo #815).

	* src/ui/ofa-ledger-treeview.c,
	* src/ui/ofa-ledger-treeview.h:
	- new ofa_ledger_treeview_get_selection() method.

	* src/ui/ofa-accounts-book.c: renamed as src/ui/ofa-accounts-chart.c