@@ -1,3 +1,7 @@
+2015-04-26 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/core/ofo-ope-template.c: fix load order of operation rows.
+
 2015-04-24 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/api/ofo-bat.h,
